--- a/common/config/i3/config
+++ b/common/config/i3/config
@@ -32,6 +32,17 @@ exec_always --no-startup-id ~/.config/i3/autostart.sh
 # needed for super to launch rofi through ksuperkey, see ~/.xprofile
 bindsym Mod1+F1 exec --no-startup-id ~/.local/bin/dots-scripts rofi-run -r
 
+###############      i3 Layouts      ###############
+
+set $i3l autosplit to workspace $WS1
+set $i3l autosplit to workspace $WS2
+set $i3l autosplit to workspace $WS3
+set $i3l autosplit to workspace $WS4
+set $i3l autosplit to workspace $WS5
+set $i3l autosplit to workspace $WS6
+set $i3l autosplit to workspace $WS7
+set $i3l autosplit to workspace $WS8
+
 #############         Bindings           ##################
 
 # kill focused window
