--- a/.editorconfig
+++ b/.editorconfig
@@ -25,6 +25,20 @@ trim_trailing_whitespace = false
 # `too_long_line_length_other     = 100`
 max_line_length = 100
 
+[{**.*sh,./dots}]
+indent_size = tab
+indent_style = tab
+
+shell_variant      = bash
+binary_next_line   = true  # like -bn
+switch_case_indent = true  # like -ci
+space_redirects    = true  # like -sr
+keep_padding       = false # like -kp
+end_of_line        = lf
+charset            = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+
 [*.{txt,out}]
 insert_final_newline = false
 
