--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -58,7 +58,7 @@ jobs:
       - job-sync-docs-to-wiki
       - job-sync-wiki-to-docs
     # run if any of the previous jobs succeeded
-    if: ${{ needs.job-sync-docs-to-wiki.result == 'success' || needs.job-sync-wiki-to-docs.result == 'success' }}
+    if: ${{ always() }}
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Latest Wiki Content
