--- a/root/dot_config/polybar/modules/audio.conf
+++ b/root/dot_config/polybar/modules/audio.conf
@@ -1,8 +1,8 @@
 [module/pulseaudio-microphone]
 type = custom/script
-exec = dots-scripts microphone
+exec = dots microphone
 tail = true
-click-left = dots-scripts microphone --toggle &
+click-left = dots microphone --toggle &
 
 [module/pulseaudio-bar]
 inherit = module/pulseaudio
