--- a/root/dot_config/polybar/modules/bluetooth.conf
+++ b/root/dot_config/polybar/modules/bluetooth.conf
@@ -1,5 +1,5 @@
 [module/bluetooth]
 type = custom/script
-exec = dots-scripts rofi-bluetooth --status | cut -d " " -f 1
+exec = dots rofi-bluetooth --status | cut -d " " -f 1
 interval = 1
-click-left = dots-scripts rofi-bluetooth &
+click-left = dots rofi-bluetooth &
