--- a/root/dot_config/polybar/modules/datetime.conf
+++ b/root/dot_config/polybar/modules/datetime.conf
@@ -10,15 +10,15 @@ time-alt = %H:%M:%S
 
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground}
-format-underline = 
+format-underline =
 format-foreground = ${colors.foreground}
 
 label = %date% %time%
 
 [module/date-popup]
 type = custom/script
-exec = dots-scripts popup-calendar
+exec = dots popup-calendar
 interval = 5
-click-left = dots-scripts popup-calendar --popup
+click-left = dots popup-calendar --popup
 format-foreground = ${colors.foreground}
 label = %output:0%
