--- a/root/dot_config/polybar/modules/light.conf
+++ b/root/dot_config/polybar/modules/light.conf
@@ -12,7 +12,7 @@ card = ${env:POLYBAR_MODULES_BACKLIGHT_CARD:intel_backlight}
 bar-width = 10
 bar-indicator = |
 bar-indicator-foreground = ${colors.foreground}
-bar-indicator-font = 
+bar-indicator-font =
 bar-fill = ─
 bar-fill-font = 4
 bar-fill-foreground = #9f78e1
@@ -41,4 +41,4 @@ format = <label>
 [module/night-mode]
 type = custom/script
 exec = echo "󰖔"
-click-left = dots-scripts night-mode auto
+click-left = dots night-mode auto
