--- a/root/dot_config/polybar/modules/menu.conf
+++ b/root/dot_config/polybar/modules/menu.conf
@@ -27,7 +27,7 @@ menu-2-0 = " 󰘕 "
 menu-2-0-exec = menu-open-0
 menu-2-0-foreground = ${colors.urgent}
 menu-2-1 = " 󰍺 "
-menu-2-1-exec = dots-scripts rofi-randr &
+menu-2-1-exec = dots rofi-randr &
 menu-2-2 = "    |"
 menu-2-2-exec = pavucontrol &
 # 3
