--- a/root/dot_config/polybar/modules/net.conf
+++ b/root/dot_config/polybar/modules/net.conf
@@ -1,6 +1,6 @@
 [module/networkmanager-dmenu]
 type = custom/script
-exec = dots-scripts check-network
+exec = dots check-network
 click-left = networkmanager_dmenu &
 click-right = exo-open $XDG_CONFIG_HOME/networkmanager-dmenu/config.ini
 label-padding = 1
@@ -16,7 +16,7 @@ interface = ${env:POLYBAR_MODULES_WIFI_IFACE:}
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
-format-connected-underline = 
+format-connected-underline =
 label-connected = %essid%
 label-connected-foreground = ${colors.foreground}
 
