--- a/root/dot_config/polybar/modules/spotify.conf
+++ b/root/dot_config/polybar/modules/spotify.conf
@@ -3,6 +3,6 @@ type = custom/script
 interval = 1
 format-prefix = " 阮 "
 format = <label>
-exec = dots-scripts spotify
-format-underline = 
+exec = dots spotify
+format-underline =
 format-foreground = ${colors.foreground}
