--- a/home/dot_config/polybar/polybars/common-bottom.conf
+++ b/home/dot_config/polybar/polybars/common-bottom.conf
@@ -5,11 +5,11 @@
 ; If no monitor is given, the primary monitor is used if it exists
 monitor = ${env:MONITOR:}
 
-; Prefer fixed center position for the `modules-center` block. 
+; Prefer fixed center position for the `modules-center` block.
 ; The center block will stay in the middle of the bar whenever
 ; possible. It can still be pushed around if other blocks need
 ; more space.
-; When false, the center block is centered in the space between 
+; When false, the center block is centered in the space between
 ; the left and right block.
 fixed-center = true
 
@@ -88,5 +88,5 @@ foreground-alt = ${colors.foreground-alt}
 radius = 12.0
 
 modules-left =
-modules-center = 
+modules-center = playing
 modules-right = keyboard
