--- a/home/dot_config/polybar/modules/music.conf
+++ b/home/dot_config/polybar/modules/music.conf
@@ -1,12 +1,18 @@
 [module/playing]
 type = custom/script
-interval = 1
-exec = playerctl metadata -s --format ' {{trunc(title, 30)}}' | awk 'NR==1 {print; exit}'
-click-left = playerctl play-pause
+interval = 2
+format-prefix = "  "
+format = <label>
+exec = dots player
+click-left = playerctl previous &
+click-right = playerctl next &
+click-middle = playerctl play-pause &
+format-underline =
+format-foreground = ${colors.foreground}
 
 [module/spotify]
 type = custom/script
-interval = 1
+interval = 2
 format-prefix = " 阮 "
 format = <label>
 exec = dots spotify
