Update polybar configuration files

--- a/home/dot_config/polybar/modules/datetime.conf
+++ b/home/dot_config/polybar/modules/datetime.conf
@@ -20,5 +20,10 @@ type = custom/script
 exec = dots popup-calendar
 interval = 5
 click-left = dots popup-calendar --popup
-format-foreground = ${colors.foreground}
+
 label = %output:0%
+
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground}
+format-underline =
+format-foreground = ${colors.foreground}
