--- a/home/dot_config/polybar/modules/keyboard.conf
+++ b/home/dot_config/polybar/modules/keyboard.conf
@@ -22,7 +22,7 @@ label-indicator-background = ${colors.background}
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-prefix = "  "
+format-prefix = " 󰌌 "
 format-prefix-foreground = ${colors.foreground}
 format-prefix-underline = ${colors.foreground-alt}
 
