--- a/home/dot_config/polybar/modules/music.conf
+++ b/home/dot_config/polybar/modules/music.conf
@@ -11,7 +11,7 @@ format-foreground = ${colors.foreground}
 [module/spotify]
 type = custom/script
 interval = 2
-format-prefix = " 阮 "
+format-prefix = " 󰓇 "
 format = <label>
 exec = dots spotify
 format-underline =
