--- a/home/dot_config/polybar/modules/resources.conf
+++ b/home/dot_config/polybar/modules/resources.conf
@@ -3,7 +3,7 @@ type = internal/cpu
 interval = 2
 format-prefix = "  "
 format-prefix-foreground = ${colors.foreground}
-format-underline = 
+format-underline =
 label = %percentage:2%%
 label-foreground = ${colors.foreground}
 
@@ -12,7 +12,7 @@ type = internal/memory
 interval = 2
 format-prefix = " 󰍛 "
 format-prefix-foreground = ${colors.foreground}
-format-underline = 
+format-underline =
 label = %percentage_used%%
 label-foreground = ${colors.foreground}
 
@@ -59,16 +59,16 @@ warn-temperature = 60
 
 format = <ramp> <label>
 format-foreground = ${colors.foreground}
-format-underline = 
+format-underline =
 format-warn = <ramp> <label-warn>
-format-warn-underline = 
+format-warn-underline =
 
-label = 﨎 %temperature-c%
-label-warn = 﨎 %temperature-c%
+label = 󰏈 %temperature-c%
+label-warn = 󱗗 %temperature-c%
 label-warn-foreground = ${colors.secondary}
 label-foreground = ${colors.foreground}
 
 ramp-0 = 
 ramp-1 =
-ramp-2 = 
+ramp-2 = 󰈸
 ramp-foreground = ${colors.foreground}
