--- a/home/dot_config/polybar/modules/mpd.conf
+++ b/home/dot_config/polybar/modules/mpd.conf
@@ -2,11 +2,11 @@
 type = internal/mpd
 format-online = <label-song> <icon-prev> <icon-stop> <toggle> <icon-next>
 
-icon-prev = 玲
-icon-stop = 栗
-icon-play = 契
-icon-pause = 
-icon-next = 怜
+icon-play = ⏵
+icon-pause = ⏸
+icon-stop = ⏹
+icon-prev = ⏮
+icon-next = ⏭
 
 label-song-maxlen = 25
 label-song-ellipsis = true
