--- a/home/dot_config/polybar/modules/net.conf
+++ b/home/dot_config/polybar/modules/net.conf
@@ -39,7 +39,7 @@ interface = ${env:POLYBAR_MODULES_ETH_IFACE:}
 interval = 3.0
 
 format-connected-underline = #55aa55
-format-connected-prefix = "  "
+format-connected-prefix = " 󰈀 "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
 
