Enable image looping in config.conf

--- a/home/dot_config/neofetch/config.conf
+++ b/home/dot_config/neofetch/config.conf
@@ -816,7 +816,7 @@ ascii_bold="on"
 # Default:  'off'
 # Values:   'on', 'off'
 # Flag:     --loop
-image_loop="off"
+image_loop="on"
 
 # Thumbnail directory
 #
