--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,7 +15,7 @@ on:
   workflow_dispatch:
 
   schedule:
-    - cron: '0 0 * * *'
+    - cron: "0 0 * * *"
 
   repository_dispatch:
     types: [docs]
@@ -62,29 +62,29 @@ jobs:
     if: ${{ always() }}
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Latest Wiki Content
-      uses: actions/checkout@v4
+      - name: Checkout Latest Wiki Content
+        uses: actions/checkout@v4
 
-    - name: Checkout github-wikito-converter
-      uses: actions/checkout@v4
-      with:
-        repository: yakivmospan/github-wikito-converter
-        path: github-wikito-converter
+      - name: Checkout github-wikito-converter
+        uses: actions/checkout@v4
+        with:
+          repository: yakivmospan/github-wikito-converter
+          path: github-wikito-converter
 
-    - name: Build and Install github-wikito-converter globally
-      run: |
-        cd github-wikito-converter
-        npm install
-        npm run build
-        cd ..
+      - name: Build and Install github-wikito-converter globally
+        run: |
+          cd github-wikito-converter
+          npm install
+          npm run build
+          cd ..
 
-    - name: Build Docs
-      run: |
-        mkdir public
-        node ./github-wikito-converter/dist/cli/gwtc.js --file-name index --output ./public --toc-level 3 ./docs
+      - name: Build Docs
+        run: |
+          mkdir public
+          node ./github-wikito-converter/dist/cli/gwtc.js --file-name index --output ./public --toc-level 3 ./docs
 
-    - name: Deploy to gh-pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./public
+      - name: Deploy to gh-pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
