--- a/home/dot_config/compfy/compfy.conf
+++ b/home/dot_config/compfy/compfy.conf
@@ -12,11 +12,11 @@ animations = true;
 # Changes animation stiffness.
 # What stiffness basically is inferring is how much the window geometry will be stretched,
 # when opening/closing windows
-animation-stiffness = 120;
+animation-stiffness = 200;
 
 # Change the mass of windows
 # Modifying the mass of windows makes them virtually heavier and therefore slower to animate.
-animation-window-mass = 0.5;
+animation-window-mass = 0.2;
 
 # Change dampening applied during the animation
 # This setting basically does what it says. It dampens the animation of windows.
@@ -25,7 +25,7 @@ animation-dampening = 12;
 # Toggles clamping
 # if you are using a animation setting that would make the window extend larger than it would be after,
 # the animation has played then it will cut the animation off once the window reaches its physical geometry.
-animation-clamping = false;
+animation-clamping = true;
 
 # Set the open window animation.
 # Options: ("none","zoom","fly-in","slide-up","slide-down","slide-left","slide-right")
@@ -33,19 +33,19 @@ animation-for-open-window = "zoom";
 
 # Set the closing window animation.
 # Options: ("none","zoom","fly-in","slide-up","slide-down","slide-left","slide-right")
-animation-for-unmap-window = "zoom";
+animation-for-unmap-window = "none";
 
 # Exclude certain windows from having a open animation.
 
-# animation-open-exclude = [
-#   "class_g = 'Dunst'"
-# ];
+animation-open-exclude = [
+  "class_g = 'i3-frame'"
+];
 
 # Exclude certain windows from having a closing animation.
 
-# animation-unmap-exclude = [
-#   "class_g = 'Dunst'"
-# ];
+animation-unmap-exclude = [
+  "class_g = 'i3-frame'"
+];
 
 #################################
 #           Corners             #
@@ -54,7 +54,7 @@ animation-for-unmap-window = "zoom";
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 16;
+corner-radius = 20;
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
@@ -85,13 +85,13 @@ glx-no-stencil = true;
 # My tests with nvidia-drivers show a 10% decrease in performance when the whole screen is modified,
 # but a 20% increase when only 1/4 is.
 # My tests on nouveau show terrible slowdown.
-glx-copy-from-front = false;
+glx-copy-from-front = true;
 
 # GLX backend: Use MESA_copy_sub_buffer to do partial screen update.
 # My tests on nouveau shows a 200% performance boost when only 1/4 of the screen is updated.
 # May break VSync and is not available on some drivers.
 # Overrides --glx-copy-from-front.
-# glx-use-copysubbuffermesa = true;
+glx-use-copysubbuffermesa = false;
 
 # GLX backend: Avoid rebinding pixmap on window damage.
 # Probably could improve performance on rapid window content changes, but is known to break things on some drivers (LLVMpipe).
@@ -119,16 +119,16 @@ glx-copy-from-front = false;
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 16)
-shadow-radius = 16;
+shadow-radius = 12;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = 0.75;
 
 # The left offset for shadows, in pixels. (defaults to -15)
-shadow-offset-x = -15;
+shadow-offset-x = -10;
 
 # The top offset for shadows, in pixels. (defaults to -15)
-shadow-offset-y = -15;
+shadow-offset-y = -10;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0;
@@ -156,9 +156,10 @@ shadow-exclude = [
     "class_g *= 'tim.exe'",
     "class_g *= 'wechat.exe'",
     "class_g *= 'Dunst'",
+    "class_g = 'i3-frame'"
 ];
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
-shadow-ignore-shaped = false;
+shadow-ignore-shaped = true;
 
 #################################
 #
@@ -166,7 +167,7 @@ shadow-ignore-shaped = false;
 #
 #################################
 
-inactive-opacity = 0.95;
+inactive-opacity = 0.90;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
@@ -176,13 +177,13 @@ inactive-opacity-override = false;
 # Do not let dimness adjust based on window opacity.
 # inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-# blur-background = true;
+blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
 blur: {
 	method = "dual_kawase";
-    strength = 6.9;
+    strength = 8;
 }
 # blur:
 # {
@@ -212,9 +213,9 @@ fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
 fade-delta = 10;
 # Opacity change between steps while fading in. (default 0.028).
-fade-in-step = 0.028;
-# Opacity change between steps while fading out. (default 0.03).
-fade-out-step = 0.02;
+fade-in-step = 0.04;
+# Opacity change between steps while fading out. (default 0.04).
+fade-out-step = 0.03;
 # Fade windows in/out when opening/closing
 # no-fading-openclose = true;
 
