Update compfy.conf settings

--- a/home/dot_config/compfy/compfy.conf
+++ b/home/dot_config/compfy/compfy.conf
@@ -54,7 +54,7 @@ animation-unmap-exclude = [
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 16;
+corner-radius = 10;
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
@@ -119,16 +119,16 @@ glx-use-copysubbuffermesa = false;
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 16)
-shadow-radius = 16;
+shadow-radius = 12;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = 0.75;
+shadow-opacity = 0.1;
 
 # The left offset for shadows, in pixels. (defaults to -15)
-shadow-offset-x = -10;
+shadow-offset-x = -15;
 
 # The top offset for shadows, in pixels. (defaults to -15)
-shadow-offset-y = -10;
+shadow-offset-y = -15;
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0;
@@ -156,7 +156,10 @@ shadow-exclude = [
     "class_g *= 'tim.exe'",
     "class_g *= 'wechat.exe'",
     "class_g *= 'Dunst'",
-    "class_g = 'i3-frame'"
+    "class_g = 'i3-frame'",
+    "class_g = 'Conky'",
+    "class_g = 'GLava'",
+    "class_g ?= 'Notify-osd'"
 ];
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
 shadow-ignore-shaped = true;
