Update animation stiffness and clamping settings

--- a/home/dot_config/compfy/compfy.conf
+++ b/home/dot_config/compfy/compfy.conf
@@ -12,7 +12,7 @@ animations = true;
 # Changes animation stiffness.
 # What stiffness basically is inferring is how much the window geometry will be stretched,
 # when opening/closing windows
-animation-stiffness = 150;
+animation-stiffness = 120;
 
 # Change the mass of windows
 # Modifying the mass of windows makes them virtually heavier and therefore slower to animate.
@@ -25,7 +25,7 @@ animation-dampening = 12;
 # Toggles clamping
 # if you are using a animation setting that would make the window extend larger than it would be after,
 # the animation has played then it will cut the animation off once the window reaches its physical geometry.
-animation-clamping = true;
+animation-clamping = false;
 
 # Set the open window animation.
 # Options: ("none","zoom","fly-in","slide-up","slide-down","slide-left","slide-right")
