--- a/home/dot_config/polybar/polybars/i3-top.conf
+++ b/home/dot_config/polybar/polybars/i3-top.conf
@@ -5,11 +5,11 @@
 ; If no monitor is given, the primary monitor is used if it exists
 monitor = ${env:MONITOR:}
 
-; Prefer fixed center position for the `modules-center` block. 
+; Prefer fixed center position for the `modules-center` block.
 ; The center block will stay in the middle of the bar whenever
 ; possible. It can still be pushed around if other blocks need
 ; more space.
-; When false, the center block is centered in the space between 
+; When false, the center block is centered in the space between
 ; the left and right block.
 fixed-center = true
 
@@ -98,4 +98,4 @@ tray-padding = 2.0
 tray-scale = 1.0
 
 wm-restack = i3
-override-redirect = true
+override-redirect = false
