Update lock command in various files

--- a/home/dot_config/polybar/modules/menu.conf
+++ b/home/dot_config/polybar/modules/menu.conf
@@ -35,7 +35,7 @@ menu-3-0 = " 󰘕 "
 menu-3-0-exec = menu-open-0
 menu-3-0-foreground = ${colors.urgent}
 menu-3-1 = "  "
-menu-3-1-exec = betterlockscreen --lock blur &
+menu-3-1-exec = betterlockscreen --lock &
 menu-3-2 = "  "
 menu-3-2-exec = systemctl -i reboot
 menu-3-3 = "    |"
