Update editor and command in wpg.conf

--- a/home/dot_config/wpg/wpg.conf
+++ b/home/dot_config/wpg/wpg.conf
@@ -3,9 +3,9 @@ set_wallpaper = true
 gtk = true
 active = 0
 light_theme = false
-editor = urxvt -e vim
+editor = code
 execute_cmd = false
-command = urxvt -e echo hi
+command = alacritty -e echo hi
 backend = wal
 alpha = 100
 smart_sort = true
