Add new modules and toggle option for feh-blur

--- a/home/dot_config/polybar/modules.conf
+++ b/home/dot_config/polybar/modules.conf
@@ -3,6 +3,7 @@
 ;---------;
 
 include-file = $XDG_CONFIG_HOME/polybar/modules/audio.conf
+include-file = $XDG_CONFIG_HOME/polybar/modules/background.conf
 include-file = $XDG_CONFIG_HOME/polybar/modules/bluetooth.conf
 include-file = $XDG_CONFIG_HOME/polybar/modules/datetime.conf
 include-file = $XDG_CONFIG_HOME/polybar/modules/fs.conf
