--- a/home/dot_config/polybar/polybars/common-top.conf
+++ b/home/dot_config/polybar/polybars/common-top.conf
@@ -5,11 +5,11 @@
 ; If no monitor is given, the primary monitor is used if it exists
 monitor = ${env:MONITOR:}
 
-; Prefer fixed center position for the `modules-center` block. 
+; Prefer fixed center position for the `modules-center` block.
 ; The center block will stay in the middle of the bar whenever
 ; possible. It can still be pushed around if other blocks need
 ; more space.
-; When false, the center block is centered in the space between 
+; When false, the center block is centered in the space between
 ; the left and right block.
 fixed-center = true
 
@@ -87,7 +87,7 @@ radius = 12.0
 
 modules-left = jgmenu menu window_switch bluetooth pulseaudio-microphone pulseaudio-bar backlight-acpi-bar
 modules-center = date-popup
-modules-right = pkg night-mode filesystem memory cpu temperature
+modules-right = pkg night-mode feh-blur-toggle filesystem memory cpu temperature
 
 tray-position = right
 tray-detached = false
