--- a/home/dot_config/polybar/polybars/i3-top.conf
+++ b/home/dot_config/polybar/polybars/i3-top.conf
@@ -87,7 +87,7 @@ radius = 12.0
 
 modules-left = jgmenu menu window_switch bluetooth pulseaudio-microphone pulseaudio-bar backlight-acpi-bar
 modules-center = date-popup
-modules-right = pkg night-mode filesystem memory cpu temperature
+modules-right = pkg night-mode feh-blur-toggle filesystem memory cpu temperature
 
 tray-position = right
 tray-detached = false
