--- a/home/dot_config/neofetch/config.conf
+++ b/home/dot_config/neofetch/config.conf
@@ -720,7 +720,7 @@ image_backend="w3m"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-#image_source="auto"
+image_source="auto"
 #image_source="${HOME}/.config/neofetch/images/arch.png"
 #image_source="${HOME}/.config/neofetch/images/arch_dark.png"
 #image_source="${HOME}/.config/neofetch/images/artix.png"
@@ -728,7 +728,7 @@ image_backend="w3m"
 #image_source="${HOME}/.config/neofetch/images/gentoo.png"
 #image_source="${HOME}/.config/neofetch/images/gentoo_dark.png"
 #image_source="${HOME}/.config/neofetch/images/lofi.png"
-image_source="${HOME}/.config/neofetch/images/sakura.png"
+#image_source="${HOME}/.config/neofetch/images/sakura.png"
 #image_source="${HOME}/.config/neofetch/images/ubuntu.png"
 #image_source="${HOME}/.config/neofetch/images/ubuntu_dark.png"
 #image_source="${HOME}/.config/neofetch/images/void.png"
