--- a/home/dot_config/polybar/modules/menu.conf
+++ b/home/dot_config/polybar/modules/menu.conf
@@ -1,4 +1,4 @@
-[module/menu]
+[module/apps]
 type = custom/menu
 format-spacing = 1
 label-open = " 󰘖 "
@@ -7,14 +7,14 @@ label-close-foreground = ${colors.urgent}
 label-separator = " | "
 # Top level
 menu-0-0 = "  "
-menu-0-0-exec = menu-open-1
+menu-0-0-exec = #apps.open.1
 menu-0-1 = "  "
-menu-0-1-exec = menu-open-2
+menu-0-1-exec = #apps.open.2
 menu-0-2 = "    |"
-menu-0-2-exec = menu-open-3
+menu-0-2-exec = #apps.open.3
 # 1
 menu-1-0 = " 󰘕 "
-menu-1-0-exec = menu-open-0
+menu-1-0-exec = #apps.open.0
 menu-1-0-foreground = ${colors.urgent}
 menu-1-1 = "  "
 menu-1-1-exec = exo-open --launch WebBrowser
@@ -24,7 +24,7 @@ menu-1-3 = "    |"
 menu-1-3-exec = exo-open --launch FileManager
 # 2
 menu-2-0 = " 󰘕 "
-menu-2-0-exec = menu-open-0
+menu-2-0-exec = #apps.open.0
 menu-2-0-foreground = ${colors.urgent}
 menu-2-1 = " 󰍺 "
 menu-2-1-exec = dots rofi-randr &
@@ -32,7 +32,7 @@ menu-2-2 = "    |"
 menu-2-2-exec = pavucontrol &
 # 3
 menu-3-0 = " 󰘕 "
-menu-3-0-exec = menu-open-0
+menu-3-0-exec = #apps.open.0
 menu-3-0-foreground = ${colors.urgent}
 menu-3-1 = "  "
 menu-3-1-exec = betterlockscreen --lock &
