--- a/home/dot_config/polybar/polybars/i3-top.conf
+++ b/home/dot_config/polybar/polybars/i3-top.conf
@@ -85,7 +85,7 @@ foreground-alt = ${colors.foreground-alt}
 
 radius = 12.0
 
-modules-left = jgmenu menu window_switch bluetooth pulseaudio-microphone pulseaudio-bar backlight-acpi-bar
+modules-left = jgmenu apps window_switch bluetooth pulseaudio-microphone pulseaudio-bar backlight-acpi-bar
 modules-center = date-popup
 modules-right = pkg night-mode feh-blur-toggle filesystem memory cpu temperature
 
