Add GitHub module to polybar configuration

--- a/home/dot_config/polybar/modules.conf
+++ b/home/dot_config/polybar/modules.conf
@@ -7,6 +7,7 @@ include-file = $XDG_CONFIG_HOME/polybar/modules/background.conf
 include-file = $XDG_CONFIG_HOME/polybar/modules/bluetooth.conf
 include-file = $XDG_CONFIG_HOME/polybar/modules/datetime.conf
 include-file = $XDG_CONFIG_HOME/polybar/modules/fs.conf
+include-file = $XDG_CONFIG_HOME/polybar/modules/github.conf
 include-file = $XDG_CONFIG_HOME/polybar/modules/i3.conf
 include-file = $XDG_CONFIG_HOME/polybar/modules/jgmenu.conf
 include-file = $XDG_CONFIG_HOME/polybar/modules/keyboard.conf
