--- a/home/dot_config/polybar/modules/audio.conf
+++ b/home/dot_config/polybar/modules/audio.conf
@@ -6,14 +6,14 @@ click-left = dots microphone --toggle &
 
 [module/pulseaudio-bar]
 inherit = module/pulseaudio
-format-volume =   <label-volume> <bar-volume>
+format-volume =  <label-volume> <bar-volume>
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
 click-right = pavucontrol
 
-format-volume =   <label-volume>
+format-volume =  <label-volume>
 format-volume-foreground = ${colors.foreground}
 label-volume = %percentage%%
 label-volume-foreground = ${colors.foreground}
@@ -42,10 +42,10 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 type = internal/alsa
 
 format-volume = <label-volume> <bar-volume>
-label-volume = VOL
+label-volume = 
 label-volume-foreground = ${root.foreground}
 
-format-muted-prefix = "  "
+format-muted-prefix = 
 format-muted-foreground = ${colors.foreground-alt}
 label-muted = sound muted
 
