--- a/home/dot_config/polybar/polybars/common-top.conf
+++ b/home/dot_config/polybar/polybars/common-top.conf
@@ -87,7 +87,7 @@ radius = 12.0
 
 modules-left = jgmenu apps window_switch bluetooth pulseaudio-microphone pulseaudio-bar backlight-acpi-bar
 modules-center = date-popup
-modules-right = pkg night-mode feh-blur-toggle filesystem memory cpu temperature
+modules-right = pkg night-mode feh-blur-toggle filesystem memory cpu temperature github
 
 tray-position = right
 tray-detached = false
