Update Polybar configuration files

--- a/home/dot_config/polybar/modules.conf
+++ b/home/dot_config/polybar/modules.conf
@@ -18,6 +18,7 @@ include-file = $XDG_CONFIG_HOME/polybar/modules/mpd.conf
 include-file = $XDG_CONFIG_HOME/polybar/modules/net.conf
 include-file = $XDG_CONFIG_HOME/polybar/modules/pkg.conf
 include-file = $XDG_CONFIG_HOME/polybar/modules/resources.conf
+include-file = $XDG_CONFIG_HOME/polybar/modules/tray.conf
 include-file = $XDG_CONFIG_HOME/polybar/modules/weather.conf
 include-file = $XDG_CONFIG_HOME/polybar/modules/window.conf
 
