--- a/home/dot_config/polybar/modules/pkg.conf
+++ b/home/dot_config/polybar/modules/pkg.conf
@@ -1,5 +1,5 @@
 [module/pkg]
 type = custom/script
 exec = dots updates
-label = %{A1:alacritty --hold -e=dots-sysupdate & disown:} %{A3:alacritty --hold -e=dots-sysupdate & disown:}%output%%{A} %{A}
+label = %{A1:alacritty -e=dots-sysupdate & disown:} %{A3:alacritty -e=dots-sysupdate & disown:}%output%%{A} %{A}
 tail = true
