--- a/home/dot_config/polybar/polybars/common-bottom.conf
+++ b/home/dot_config/polybar/polybars/common-bottom.conf
@@ -89,4 +89,4 @@ radius = 12.0
 
 modules-left =
 modules-center = playing
-modules-right = keyboard
+modules-right = keyboard filesystem memory cpu temperature
