--- a/home/dot_config/polybar/polybars/i3-bottom.conf
+++ b/home/dot_config/polybar/polybars/i3-bottom.conf
@@ -89,7 +89,7 @@ radius = 12.0
 
 modules-left = i3-with-icons
 modules-center = playing
-modules-right = keyboard
+modules-right = keyboard filesystem memory cpu temperature
 
 wm-restack = i3
 override-redirect = false
