--- a/home/dot_config/polybar/polybars/common-top.conf
+++ b/home/dot_config/polybar/polybars/common-top.conf
@@ -87,12 +87,4 @@ radius = 12.0
 
 modules-left = jgmenu apps window_switch bluetooth pulseaudio-microphone pulseaudio-bar backlight-acpi-bar
 modules-center = date-popup
-modules-right = pkg night-mode feh-blur-toggle filesystem memory cpu temperature github
-
-tray-position = right
-tray-detached = false
-tray-maxsize = 16
-tray-offset-x = 0
-tray-offset-y = 0
-tray-padding = 0
-tray-scale = 1.0
+modules-right = pkg night-mode feh-blur-toggle github tray
