--- a/home/dot_config/polybar/polybars/i3-top.conf
+++ b/home/dot_config/polybar/polybars/i3-top.conf
@@ -87,15 +87,7 @@ radius = 12.0
 
 modules-left = jgmenu apps window_switch bluetooth pulseaudio-microphone pulseaudio-bar backlight-acpi-bar
 modules-center = date-popup
-modules-right = pkg night-mode feh-blur-toggle filesystem memory cpu temperature github
-
-tray-position = right
-tray-detached = false
-tray-maxsize = 15
-tray-offset-x = 0
-tray-offset-y = 0
-tray-padding = 2.0
-tray-scale = 0.8
+modules-right = pkg night-mode feh-blur-toggle github tray
 
 wm-restack = i3
 override-redirect = false
