--- a/home/dot_config/polybar/modules/i3.conf
+++ b/home/dot_config/polybar/modules/i3.conf
@@ -2,7 +2,7 @@
 type = internal/i3
 format = <label-state> <label-mode>
 index-sort = true
-wrapping-scroll = false
+wrapping-scroll = true
 
 ; Only show workspaces on the same output as the bar
 ;pin-workspaces = true
@@ -13,7 +13,7 @@ label-mode-background = ${colors.background}
 
 ; focused = Active workspace on focused monitor
 label-focused = %name%
-label-focused-background = 
+label-focused-background =
 label-focused-foreground = ${colors.foreground}
 label-focused-underline = ${colors.foreground}
 label-focused-padding = 2
@@ -22,7 +22,7 @@ label-focused-padding = 2
 label-unfocused = %name%
 label-unfocused-padding = 2
 label-unfocused-foreground = ${colors.foreground-alt}
-label-unfocused-underline = 
+label-unfocused-underline =
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %name%
@@ -41,14 +41,16 @@ label-urgent-padding = 2
 [module/i3-with-icons]
 inherit = module/i3
 
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
-ws-icon-7 = 8;󰙯
+ws-icon-0 = 1;󰝦
+ws-icon-1 = 2;󰝦
+ws-icon-2 = 3;󰝦
+ws-icon-3 = 4;󰝦
+ws-icon-4 = 5;󰝦
+ws-icon-5 = 6;󰝦
+ws-icon-6 = 7;󰝦
+ws-icon-7 = 8;󰝦
+ws-icon-8 = 9;󰝦
+ws-icon-9 = 10;󰝦
 
 ; modified labels using icon
 label-focused = %index% %icon%
