Update image backend and disable image looping

--- a/home/dot_config/neofetch/config.conf
+++ b/home/dot_config/neofetch/config.conf
@@ -706,7 +706,7 @@ disk_display="off"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="w3m"
+image_backend="ascii"
 
 # Image Source
 #
@@ -816,7 +816,7 @@ ascii_bold="on"
 # Default:  'off'
 # Values:   'on', 'off'
 # Flag:     --loop
-image_loop="on"
+image_loop="off"
 
 # Thumbnail directory
 #
