--- a/home/dot_config/polybar/modules/menu.conf
+++ b/home/dot_config/polybar/modules/menu.conf
@@ -12,7 +12,7 @@ menu-0-1-exec = #apps.open.2
 menu-0-2 = "   |"
 menu-0-2-exec = #apps.open.3
 # 1
-menu-1-0 = 󰘕
+menu-1-0 = " 󰘕 "
 menu-1-0-exec = #apps.open.0
 menu-1-0-foreground = ${colors.urgent}
 menu-1-1 = "  "
@@ -22,15 +22,17 @@ menu-1-2-exec = exo-open --launch TerminalEmulator
 menu-1-3 = "   |"
 menu-1-3-exec = exo-open --launch FileManager
 # 2
-menu-2-0 = 󰘕
+menu-2-0 = " 󰘕 "
 menu-2-0-exec = #apps.open.0
 menu-2-0-foreground = ${colors.urgent}
 menu-2-1 = " 󰍺 "
 menu-2-1-exec = dots rofi-randr &
-menu-2-2 = "   |"
-menu-2-2-exec = pavucontrol &
+menu-2-2 = "  "
+menu-2-2-exec = dots i3-resurrect-rofi &
+menu-2-3 = "   |"
+menu-2-3-exec = pavucontrol &
 # 3
-menu-3-0 = 󰘕
+menu-3-0 = " 󰘕 "
 menu-3-0-exec = #apps.open.0
 menu-3-0-foreground = ${colors.urgent}
 menu-3-1 = "  "
