Update menu icons in polybar configuration

--- a/home/dot_config/polybar/modules/menu.conf
+++ b/home/dot_config/polybar/modules/menu.conf
@@ -28,7 +28,7 @@ menu-2-0-exec = #apps.open.0
 menu-2-0-foreground = ${colors.urgent}
 menu-2-1 = " 󰍺 "
 menu-2-1-exec = dots rofi-randr &
-menu-2-2 = "  "
+menu-2-2 = "  "
 menu-2-2-exec = dots i3-resurrect-rofi &
 menu-2-3 = "   |"
 menu-2-3-exec = pavucontrol &
