--- a/home/dot_config/alacritty/alacritty.toml
+++ b/home/dot_config/alacritty/alacritty.toml
@@ -1,8 +1,13 @@
 live_config_reload = true
 working_directory = "None"
 
+[shell]
+program = "/bin/zsh"
+args = ["-l", "-c", "tmux attach -t '(∩Ȍ▾Ȍ)⊃━☆ﾟ,*' 2> /dev/null || tmux new -s '(∩Ȍ▾Ȍ)⊃━☆ﾟ,*'"]
+
 [colors]
 draw_bold_text_with_bright_colors = true
+transparent_background_colors = true
 
 [colors.bright]
 black = "#686868"
