Update i3wm config and polybar config

--- a/home/dot_config/polybar/modules.conf
+++ b/home/dot_config/polybar/modules.conf
@@ -2,25 +2,25 @@
 ; MODULES ;
 ;---------;
 
-include-file = $XDG_CONFIG_HOME/polybar/modules/audio.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/background.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/bluetooth.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/datetime.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/fs.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/github.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/i3.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/jgmenu.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/keyboard.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/light.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/menu.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/music.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/mpd.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/net.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/pkg.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/resources.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/tray.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/weather.conf
-include-file = $XDG_CONFIG_HOME/polybar/modules/window.conf
+include-file = ~/.config/polybar/modules/audio.conf
+include-file = ~/.config/polybar/modules/background.conf
+include-file = ~/.config/polybar/modules/bluetooth.conf
+include-file = ~/.config/polybar/modules/datetime.conf
+include-file = ~/.config/polybar/modules/fs.conf
+include-file = ~/.config/polybar/modules/github.conf
+include-file = ~/.config/polybar/modules/i3.conf
+include-file = ~/.config/polybar/modules/jgmenu.conf
+include-file = ~/.config/polybar/modules/keyboard.conf
+include-file = ~/.config/polybar/modules/light.conf
+include-file = ~/.config/polybar/modules/menu.conf
+include-file = ~/.config/polybar/modules/music.conf
+include-file = ~/.config/polybar/modules/mpd.conf
+include-file = ~/.config/polybar/modules/net.conf
+include-file = ~/.config/polybar/modules/pkg.conf
+include-file = ~/.config/polybar/modules/resources.conf
+include-file = ~/.config/polybar/modules/tray.conf
+include-file = ~/.config/polybar/modules/weather.conf
+include-file = ~/.config/polybar/modules/window.conf
 
 [settings]
 screenchange-reload = true
