--- a/home/dot_config/i3/config
+++ b/home/dot_config/i3/config
@@ -1,5 +1,10 @@
 # Documentation: https://i3wm.org/docs/userguide.html
 
+include config.d/autostart.conf
+include config.d/windows-control.conf
+
+# Documentation: https://i3wm.org/docs/userguide.html
+
 # font
 # TODO: Figure out if this font is used anywhere
 font pango:monospace 0
@@ -25,14 +30,6 @@ set $WS7 "7"
 set $WS8 "8"
 set $WS9 "9"
 set $WS10 "10"
-
-###############     Autostart      ##################
-
-# run with reload
-exec_always --no-startup-id ~/.config/i3/autostart.sh
-
-# needed for super to launch rofi through ksuperkey, see ~/.xprofile
-bindsym Mod1+F1 exec --no-startup-id ~/.local/bin/dots rofi-run -r
 
 ###############      i3 Layouts      ###############
 
@@ -230,10 +227,6 @@ bindcode $Mod+23 layout toggle splitv splith
 # task switcher using skippy-xd
 bindsym $Mod+Shift+Tab exec --no-startup-id skippy-xd
 
-# switch to workspace with urgent window
-for_window [urgent="latest"] focus
-focus_on_window_activation   focus
-
 # container layout
 bindsym $Mod+h split h
 bindsym $Mod+v split v
@@ -309,37 +302,3 @@ mode "$mode_gaps_outer" {
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
-
-# focus, floating, & sticky
-for_window [window_role="(?i)(?:pop-up|setup|task_dialog|dialog|menu|Preferences)"] floating enable
-for_window [title="Volume Control"] floating enable sticky enable
-for_window [title="(?i)(?:copying|deleting|moving)"] floating enable
-for_window [class="Sxiv"] floating enable
-for_window [class="(?i)(?:qt5ct|pinentry)"] floating enable sticky enable
-for_window [title="alsamixer"] floating enable border pixel 1
-for_window [class="Clipgrab"] floating enable
-for_window [title="File Transfer*"] floating enable
-for_window [class="Galculator"] floating enable border pixel 1
-for_window [class="GParted"] floating enable
-for_window [title="(?i)wpg"] floating enable
-for_window [title="i3_help"] floating enable sticky enable
-for_window [class="Lightdm-gtk-greeter-settings"] floating enable
-for_window [class="Lxappearance"] floating enable sticky enable
-for_window [class="Manjaro-hello"] floating enable
-for_window [class="Manjaro Settings Manager"] floating enable
-for_window [title="MuseScore: Play Panel"] floating enable
-for_window [class="Nitrogen"] floating enable sticky enable
-for_window [class="Oblogout"] fullscreen enable
-for_window [class="octopi"] floating enable
-for_window [class="Pamac-manager"] floating enable
-for_window [class="Pavucontrol"] floating enable
-for_window [class="Qtconfig-qt4"] floating enable sticky enable
-for_window [class="Simple-scan"] floating enable
-for_window [class="(?i)System-config-printer.py"] floating enable
-for_window [class="Thus"] floating enable
-for_window [class="Timeset-gui"] floating enable
-for_window [class="(?i)virtualbox"] floating enable
-for_window [class="(?i)virtualbox"] fullscreen enable
-for_window [class="Xfburn"] floating enable
-
-popup_during_fullscreen smart
