--- a/home/dot_config/polybar/config.ini
+++ b/home/dot_config/polybar/config.ini
@@ -1,7 +1,7 @@
 [section/base]
-include-file = $XDG_CONFIG_HOME/polybar/modules.conf
-include-file = $XDG_CONFIG_HOME/polybar/master.conf
-include-file = $XDG_CONFIG_HOME/polybar/polybars/common-top.conf
-include-file = $XDG_CONFIG_HOME/polybar/polybars/common-bottom.conf
-include-file = $XDG_CONFIG_HOME/polybar/polybars/i3-top.conf
-include-file = $XDG_CONFIG_HOME/polybar/polybars/i3-bottom.conf
+include-file = ~/.config/polybar/modules.conf
+include-file = ~/.config/polybar/master.conf
+include-file = ~/.config/polybar/polybars/common-top.conf
+include-file = ~/.config/polybar/polybars/common-bottom.conf
+include-file = ~/.config/polybar/polybars/i3-top.conf
+include-file = ~/.config/polybar/polybars/i3-bottom.conf
